# back-end

./: pyproject.toml  pytest.ini
docker/: Dockerfile
src/: gunicorn_config.py
src/core/: apps.py  handlers.py  serializers.py  urls.py  views.py
src/core/templates/registration/: password_reset_email.html  password_reset_email.txt
src/settings/components/: __init__.py  authentication.py  base.py  rest.py
src/settings/environments/: production.py  staging.py
src/tests/: factories.py  fixtures.py
src/tests/integration/: test_rest_login.py  test_rest_password_reset.py  test_rest_registration.py
